Scroll bars in chat overlapped bottom input fixed

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$black:         #384047;
+$black:         #2d3339;
 
 $blue:          darken(#5fafef, 5%);
 $blue-light:    lighten($blue, 10%);
